examples/test/testpolicy4796.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4796
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key33: value11
      key12: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value28
          key1: value10
      podSelector:
        matchLabels:
          key8: value10
          key35: value13
